@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 1.12
 	as_string should not return undef
+	Added mutation tests to the test dashboard
 
 1.11	Mon Feb  2 12:59:36 EST 2026
 	Fix "skipped: (no reason given)" https://www.cpantesters.org/cpan/report/6af2b33e-fef6-11f0-9424-b5d717f4d45d
